<resources>
    <string name="app_name">Job Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_search_params">Nieuwe zoekopdracht</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="new_search">Nieuwe zoekopdracht</string>
    <string-array name="saved_searches">
        <item>Java Architect</item>
        <item>Kassier</item>
    </string-array>
    <string name="favorites">Favoriete jobs</string>
    <string name="settings">Instellingen</string>
    <string name="title_activity_saved_search">Bewaarde zoekopdrachten</string>
    <string name="no_saved_searches">Geen bewaarde zoekopdrachten gevonden.</string>
    <string name="menu_delete">Verwijder</string>
    <string name="title_activity_favorites">Favoriete jobs</string>
    <string name="no_favorites">Geen favoriete jobs gevonden.</string>
    <string name="add_favorite">Favoriet</string>
    <string name="menu_saveSearch">Bewaar zoekopdracht</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="pref_display_alarm_title">Automatische zoekopdracht</string>
    <string name="key_display_alarm">display_alarm</string>
    <string name="setting_new_job_warning">Auto-zoeken</string>
    <string name="summary_new_job_warning">Plan een dagelijkse zoekopdracht</string>
    <string name="on">AAN</string>
    <string name="off">UIT</string>
    <string name="auto_saved_search">Bewaarde zoekopdracht</string>
    <string name="key_saved_search">saved_search</string>
    <string name="time_task">Tijdstip zoekopdracht</string>
    <string name="key_time_task">time_task</string>
    <string name="keywords">Trefwoorden</string>
    <string name="jobtitle">Functietitel</string>
    <string name="country">Land</string>
    <string name="postalcode">Postcode</string>
    <string name="radius">In een straal van </string>
    <string name="industry">Bedrijfstak</string>
    <string name="functions">Functies</string>
    <string name="search">Zoek</string>
    <string name="title_activity_job_search">JobSearchActivity</string>
    <string name="title_activity_job_detail">Vacature Detail</string>
    <string name="get_location">Bepaal huidige locatie</string>
    <string-array name="job_functions">
        <item>No selection</item>
        <item>Accounting / Auditing</item>
        <item>Administrative</item>
        <item>Advertising</item>
        <item>Analyst</item>
        <item>Art / Creative</item>
        <item>Business Development</item>
        <item>Consulting</item>
        <item>Customer Service</item>
        <item>Distribution</item>
        <item>Design</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Finance</item>
        <item>General Business</item>
        <item>Health Care Provider</item>
        <item>Human Resources</item>
        <item>Information Technology</item>
        <item>Legal</item>
        <item>Management</item>
        <item>Manufacturing</item>
        <item>Marketing</item>
        <item>Other</item>
        <item>Public Relations</item>
        <item>Purchasing</item>
        <item>Product Management</item>
        <item>Project Management</item>
        <item>Production</item>
        <item>Quality Assurance</item>
        <item>Research</item>
        <item>Sales</item>
        <item>Science</item>
        <item>Strategy / Planning</item>
        <item>Supply Chain</item>
        <item>Training</item>
        <item>Writing / Editing</item>
    </string-array>
    <string-array name="job_function_codes">
        <item></item>
        <item>acct</item>
        <item>adm</item>
        <item>advr</item>
        <item>anls</item>
        <item>art</item>
        <item>bd</item>
        <item>cnsl</item>
        <item>cust</item>
        <item>dist</item>
        <item>dsgn</item>
        <item>edu</item>
        <item>eng</item>
        <item>fin</item>
        <item>genb</item>
        <item>hcpr</item>
        <item>hr</item>
        <item>it</item>
        <item>lgl</item>
        <item>mgmt</item>
        <item>mnfc</item>
        <item>mrkt</item>
        <item>othr</item>
        <item>pr</item>
        <item>prch</item>
        <item>prdm</item>
        <item>prjm</item>
        <item>prod</item>
        <item>qa</item>
        <item>rsch</item>
        <item>sale</item>
        <item>sci</item>
        <item>stra</item>
        <item>supl</item>
        <item>trng</item>
        <item>wrt</item>
    </string-array>
    <string-array name="industries">
        <item>No selection</item>
        <item>Accounting</item>
        <item>Airlines/Aviation</item>
        <item>Alternative Dispute Resolution</item>
        <item>Alternative Medicine</item>
        <item>Animation</item>
        <item>Apparel and Fashion</item>
        <item>Architecture and Planning</item>
        <item>Arts and Crafts</item>
        <item>Automotive</item>
        <item>Aviation and Aerospace</item>
        <item>Banking</item>
        <item>Biotechnology</item>
        <item>Broadcast Media</item>
        <item>Building Materials</item>
        <item>Business Supplies and Equipment</item>
        <item>Capital Markets</item>
        <item>Chemicals</item>
        <item>Civic and Social Organization</item>
        <item>Civil Engineering</item>
        <item>Commercial Real Estate</item>
        <item>Computer and Network Security</item>
        <item>Computer Games</item>
        <item>Computer Hardware</item>
        <item>Computer Networking</item>
        <item>Computer Software</item>
        <item>Construction</item>
        <item>Consumer Electronics</item>
        <item>Consumer Goods</item>
        <item>Consumer Services</item>
        <item>Cosmetics</item>
        <item>Dairy</item>
        <item>Defense and Space</item>
        <item>Design</item>
        <item>Education Management</item>
        <item>E-Learning</item>
        <item>Electrical/Electronic Manufacturing</item>
        <item>Entertainment</item>
        <item>Environmental Services</item>
        <item>Events Services</item>
        <item>Executive Office</item>
        <item>Facilities Services</item>
        <item>Farming</item>
        <item>Financial Services</item>
        <item>Fine Art</item>
        <item>Fishery</item>
        <item>Food and Beverages</item>
        <item>Food Production</item>
        <item>Fund-Raising</item>
        <item>Furniture</item>
        <item>Gambling and Casinos</item>
        <item>Glass, Ceramics and Concrete</item>
        <item>Government Administration</item>
        <item>Government Relations</item>
        <item>Graphic Design</item>
        <item>Health, Wellness and Fitness</item>
        <item>Higher Education</item>
        <item>Hospital and Health Care</item>
        <item>Hospitality</item>
        <item>Human Resources</item>
        <item>Import and Export</item>
        <item>Individual and Family Services</item>
        <item>Industrial Automation</item>
        <item>Information Services</item>
        <item>Information Technology and Services</item>
        <item>Insurance</item>
        <item>International Affairs</item>
        <item>International Trade and Development</item>
        <item>Internet</item>
        <item>Investment Banking</item>
        <item>Investment Management</item>
        <item>Judiciary</item>
        <item>Law Enforcement</item>
        <item>Law Practice</item>
        <item>Legal Services</item>
        <item>Legislative Office</item>
        <item>Leisure, Travel and Tourism</item>
        <item>Libraries</item>
        <item>Logistics and Supply Chain</item>
        <item>Luxury Goods and Jewelry</item>
        <item>Machinery</item>
        <item>Management Consulting</item>
        <item>Maritime</item>
        <item>Market Research</item>
        <item>Marketing and Advertising</item>
        <item>Mechanical or Industrial Engineering</item>
        <item>Media Production</item>
        <item>Medical Devices</item>
        <item>Medical Practice</item>
        <item>Mental Health Care</item>
        <item>Military</item>
        <item>Mining and Metals</item>
        <item>Motion Pictures and Film</item>
        <item>Museums and Institutions</item>
        <item>Music</item>
        <item>Nanotechnology</item>
        <item>Newspapers</item>
        <item>Non-Profit Organization Management</item>
        <item>Oil and Energy</item>
        <item>Online Media</item>
        <item>Outsourcing/Offshoring</item>
        <item>Package/Freight Delivery</item>
        <item>Packaging and Containers</item>
        <item>Paper and Forest Products</item>
        <item>Performing Arts</item>
        <item>Pharmaceuticals</item>
        <item>Philanthropy</item>
        <item>Photography</item>
        <item>Plastics</item>
        <item>Political Organization</item>
        <item>Primary/Secondary Education</item>
        <item>Printing</item>
        <item>Professional Training and Coaching</item>
        <item>Program Development</item>
        <item>Public Policy</item>
        <item>Public Relations and Communications</item>
        <item>Public Safety</item>
        <item>Publishing</item>
        <item>Railroad Manufacture</item>
        <item>Ranching</item>
        <item>Real Estate</item>
        <item>Recreational Facilities and Services</item>
        <item>Religious Institutions</item>
        <item>Renewables and Environment</item>
        <item>Research</item>
        <item>Restaurants</item>
        <item>Retail</item>
        <item>Security and Investigations</item>
        <item>Semiconductors</item>
        <item>Shipbuilding</item>
        <item>Sporting Goods</item>
        <item>Sports</item>
        <item>Staffing and Recruiting</item>
        <item>Supermarkets</item>
        <item>Telecommunications</item>
        <item>Textiles</item>
        <item>Think Tanks</item>
        <item>Tobacco</item>
        <item>Translation and Localization</item>
        <item>Transportation/Trucking/Railroad</item>
        <item>Utilities</item>
        <item>Venture Capital and Private Equity</item>
        <item>Veterinary</item>
        <item>Warehousing</item>
        <item>Wholesale</item>
        <item>Wine and Spirits</item>
        <item>Wireless</item>
        <item>Writing and Editing</item>
    </string-array>
    <string name="jd_jobdesc">Vacatureomschrijving</string>
    <string name="jd_wantedskills">Gewenste vaardigheden &amp; ervaring</string>
    <string name="jd_companydesc">Beschrijving van het bedrijf</string>
</resources>