<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".SearchParams" >

        <EditText
            android:id="@+id/etKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/keywords" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etJobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/jobtitle"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etPostalCode"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="95"
                android:hint="@string/postalcode" />

            <ImageButton
                android:id="@+id/btnGetLocation"
                android:contentDescription="@string/get_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_find_location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="95"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvDistValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/sbDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20" />

        <TextView
            android:id="@+id/tvIndustry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spIndustry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/industries" />

        <TextView
            android:id="@+id/tvFunctions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/functions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spFunctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/job_functions" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

</ScrollView>