<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/iv_app_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />
    
    <Button
        android:id="@+id/btn_new_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/iv_app_image"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/misc_binoculars"
        android:text="@string/new_search" />
    
    <Button
        android:id="@+id/btn_saved_searches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_new_search"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/saved_searches"
        android:text="@string/saved_searches" />
    
    <Button
        android:id="@+id/btn_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_saved_searches"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/misc_star"
        android:text="@string/favorites" />
    
    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_favorites"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/utilities_settings"
        android:text="@string/settings" />

</RelativeLayout>